--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
        </div>
      </div>
 
-    <div style="background-color: red; width:100px; height:100px; flex-shrink:0"></div>  <!-- timer -->
+    <!-- timer -->
+    <div id="timer" style="background-color: red; width:100px; height:100px; flex-shrink:0; display:flex; align-items:center; justify-content: center">
+    10</div>
      <!-- vida enemigo -->
      <div style="position:relative; height: 30px; width: 100%" ">
 
@@ -34,6 +36,19 @@
 
 
 
+    </div>
+    <div id="displayText"
+     style=
+        "position:absolute;
+        color:white;
+        align-items:center;
+        justify-content:center;
+        top:0;
+        right:0;
+        bottom:0;
+        left:0;
+        display:none">
+      Tie
     </div>
     <canvas> </canvas>
     </div>
